fixed image wrappings

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,6 @@ a, a:hover, a:focus, a:active {
       margin:0;
       font-size:48px;
       font-weight:900;
-      width:500px;
     }
 
     .c1-h2 {
@@ -83,11 +82,12 @@ a, a:hover, a:focus, a:active {
 
     .c1-placeholder {
       display:flex;
+      flex:1;
       justify-content:center;
       align-items:center;
       background-color:gray;
       height:200px;
-      min-width:500px;
+      min-width:400px;
       
     }
 
@@ -124,6 +124,7 @@ a, a:hover, a:focus, a:active {
 .image-placeholder-main {
   flex:1;
   display:flex;
+  flex-wrap:wrap;
   gap:50px;
   justify-content: center;
   align-items:center;
